--- a/Univariate/index.Rmd
+++ b/Univariate/index.Rmd
@@ -28,7 +28,9 @@ This equation states that the expected value of a dependent variable (E[Y]) is d
 
 Ex. Let's say that you are a jogger that runs every day and you want to determine the speed that you run at. You record the duration and distance that you run every day. Thus, the predictor is the duration of your run per day, the response is the distance that was run, and the parameter coefficient is the speed that you run at. The residuals in this model are represented by unexplained variation from this relationship, such as you having to stop to tie your shoe that would increase the length but not the distance. 
 
-```{r}
+```{r warning=FALSE, message=FALSE}
+library(LearnCommAnalysis)
+
 
 duration <- c(30,60,45,44,36,58,57,22,25)
 distance <- c(2.5,5.1,3.9,3.9,3,4.9,4.8,1.7,2.1)
@@ -72,9 +74,7 @@ This is an example of a logistic regression that is a member of the GLM family f
 
 ```{r}
 ##load data
-response <- c(1,0,0,0,1,0,0,1,0,0,0,0,0,0,1,0,0,0,1,0,1,0,0,0,1,0,0,1,0,0,1,0,0,0,1,0,0,0,1,0,1,0,0,0,1,0,0,1,1,1,1,1,0,0,1,0,1,1,1,0,1,0,0,0,1,0,1,1,1,1,1,1,1,1,1,0,1,1,1,1)
-predictor <- c(rep("control",20),rep("drug1",20),rep("drug2",20),rep("drug3",20))
-drug.trial <- data.frame(predictor,response)
+head(drug.trial)
 ```
 
 The formula has the same syntax as the LM shown above. The response is followed by the tilda and the predictors. Here, we also specify where the data is coming from. In this case it is coming from the drug.trial data frame we created. Lastly, the main nuance of using the GLM function is the specification of a family. Since our data is binary and follows a binomial distribution, that is what we refer to it as. 
@@ -132,7 +132,7 @@ Quasibinomial and quasipoisson compensate for overdispersed data with an extra p
 Here is an example of bird surveys in Southern Ontario in forests, urban parks, and city centers. Determine if there is a difference between the habitats and which was the greatest. 
 
 ```{r}
-bird.data <- data.frame(species.rich =c(rpois(50,5),rpois(50,3),rpois(50,3.1)),habitat = c(rep("forest",50),rep("urban.parks",50),rep("city",50))) ## load data
+head(bird.data)
 ```
 
 
@@ -142,9 +142,6 @@ A Generalized Linear Mixed Model (GLMM) is a type of GLM that includes a random 
 
 ```{r}
 ## Make up some data
-set.seed(2)
-ranch <- data.frame(cattle=c(20,18,19,18,17,19,15,13,14,12,14,11,10,9,11,8,9,10,7,5),biomass=sort(exp(rnorm(20))), year=rep(c(2014,2015,2016,2017),5))
-
 head(ranch)
 
 plot(ranch$cattle, ranch$biomass, ylab="Biomass (kg/m)", xlab="Cattle (per ha)", pch=19)
@@ -198,11 +195,8 @@ The main package for GAMs are `mgcv`. We can explore fitting a simple GAM model 
 
 ```{r warning=FALSE, message=FALSE}
 library(mgcv)
-library(tidyverse)
 
-year <- c(1980,1981,1982,1983,1984,1985,1986,1987,1988,1989,1990,1991,1992,1993,1994,1995,1996,1997,1998,1999,2000,2001,2002,2003,2004,2005,2006,2007,2008,2009,2010)
-ndvi <- c(1.53,1.57,1.53,1.85,1.84,1.85,2.15,2.13,2.46,2.13,2.46,2.42,2.3,2.56,2.15,2.7,3.07,2.7,3.07,2.56,2.46,2.28,2.3,1.85,2.15,1.99,1.84,1.85,2.3,2.28,2.61)
-gam.data<- data.frame(year,ndvi)
+head(gam.data)
 
 ## Plot the data
 ggplot(gam.data, aes(x=year, y=ndvi)) + geom_point()
