--- a/Ordinations/ordinations.Rmd
+++ b/Ordinations/ordinations.Rmd
@@ -23,6 +23,7 @@ PCA is a indirect gradient analysis. Indirect, in that we are trying to determin
 
 ```{r warning=FALSE, message=FALSE}
 library(vegan)
+library(LearnCommAnalysis)
 
 ## Load data
 data(dune)
@@ -215,3 +216,12 @@ summary(indval2)
 ```
 
 Here we can see that the addition of manure results in the presence of two additional species that when manure is missing. Similarly, the different management strategies each form unique assemblages. 
+
+### 4.6 Hack-a-thon practice
+
+Try an example on your own from one of the datasets we looked at earlier. The `multivar` dataset has measured the community composition of different shrub and open microsites along an elevational gradient over multiple years. The research question you are to explore is how does the shrub effect changes in community composition along this elevation gradient. 
+
+```{r}
+head(multivar)
+```
+
