fixed missed parenthesis. Editted group_by call in intro

--- a/Analysis.Fundamental/Intro.rmd
+++ b/Analysis.Fundamental/Intro.rmd
@@ -152,11 +152,11 @@ The gather function is the inversed version of spread. Again we pipe the dataset
 
 Sometimes for your analyses you do not want to use the raw data, but rather summary statistics. For example, conducting a regression on site-level abundance rather than on the individual plots. One of the simpliest ways of doing this is using `dplyr` package. The workflow for this is three steps: 1) call data, 2) choose predictor variables that are to be summarized by, and 3) choose the response variables that are to be summarized.
 
-Using the same dataset as before, let's calculate the mean, standard deviation, and n for my exclosure treatments. 
+Using the same dataset as before, let's calculate the mean, standard error, and n for my exclosure treatments. 
 
 ```{r}
 
-data.summary <- data.long %>% group_by(Exclosure) %>% summarize(avg=mean(Abundance), stdev=sd(Abundance), n=length(Abundance))
+data.summary <- data.long %>% group_by(Exclosure) %>% summarize(avg=mean(Abundance), error=se(Abundance), n=length(Abundance))
 
 data.summary
 
@@ -168,7 +168,7 @@ The benefit of this format is that you can group by more variables to get summar
 
 ```{r}
 
-data.summary <- data.long %>% group_by(Microsite, Exclosure) %>% summarize(avg=mean(Abundance), stdev=sd(Abundance), n=length(Abundance))
+data.summary <- data.long %>% group_by(Exclosure, Species) %>% summarize(avg=mean(Abundance), error=se(Abundance), n=length(Abundance))
 
 data.summary
 
